# dict2star

./: pyproject.toml
src/dict2star/: frames.py  values.py
